--- a/css/main.css
+++ b/css/main.css
@@ -692,7 +692,8 @@ textarea {
     margin-bottom: 8px;
     font-size: 0.95em !important;
     padding-bottom: 3px;
-    border-bottom: 1px solid #eee;
+/*    border-bottom: 1px solid #eee;*/
+    border-bottom: 1px solid #13486b;
 }
 
 .post-comment > div:first-child {
