--- a/css/main.css
+++ b/css/main.css
@@ -181,7 +181,7 @@ textarea {
 }
 
 .floating-panel {
-    width: 950px;
+    width: 970px;
     background-color: transparent;
     position: fixed;
     left: 0;
@@ -689,11 +689,11 @@ textarea {
 }
 
 .post-comment {
-    margin-bottom: 8px;
+    margin-bottom: 12px;
     font-size: 0.95em !important;
-    padding-bottom: 3px;
+/*    padding-bottom: 3px;*/
 /*    border-bottom: 1px solid #eee;*/
-    border-bottom: 1px solid #13486b;
+/*    border-bottom: 1px solid #13486b;*/
 }
 
 .post-comment > div:first-child {
