--- a/css/main.css
+++ b/css/main.css
@@ -628,6 +628,15 @@ textarea {
     padding: 0;
 }
 
+#popup-logged-out {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1003;
+}
+
 .floating-panel-content > * {
     margin-bottom: 10px;
 }
