--- a/css/main.css
+++ b/css/main.css
@@ -481,7 +481,7 @@ textarea {
 .post-block.ui-widget {
     display: inline-block;
 /*    background-color: #13486b;*/
-    background-color: #444;
+    background-color: #439501;
     height: 200px;
     width: 325px;
     overflow: hidden;
@@ -489,7 +489,7 @@ textarea {
     margin-bottom: -1px;
     cursor: pointer;
     color: white;
-    font-size: 0.95em;
+/*    font-size: 0.95em;*/
 }
 
 .post-block.load-more {
@@ -750,35 +750,9 @@ textarea {
     z-index: 999;
 }
 
-/*.post-comment .ui-state-default {
-    padding: 5px;
-    position: relative;
-}
-
-.post-comment-user-image {
-    background-position: center;
-    background-size: 100%;
-    width: 40px;
-    height: 40px;
-    background-repeat: no-repeat;
-    display: inline-block;
-}
-
-.post-comment-header {
-    height: 100%;
-    margin-left: 60px;
-}
-
-.post-comment a:hover, #post-message-user a:hover {
-    text-decoration: underline;
-}*/
-
-/*.post-comment .ui-widget-content {
-    padding: 3px;
-}*/
-
 .ui-widget {
     background: white;
+    border-radius: 5px;
 }
 
 .menu {
