--- a/css/main.css
+++ b/css/main.css
@@ -536,11 +536,11 @@ textarea {
 #post-permalink {
     display: inline-block;
     margin-right: 10px;
-    text-decoration: underline;
 }
 
 #post-permalink:hover {
-    color: #e31025;
+/*    color: #e31025;*/
+    text-decoration: underline;
 }
 
 .post-block.post-block-text > div,
