--- a/css/main.css
+++ b/css/main.css
@@ -492,7 +492,7 @@ textarea {
     margin: 3px;
     margin-bottom: -1px;
     cursor: pointer;
-    color: white;
+    color: #444;
 /*    font-size: 0.95em;*/
 }
 
