--- a/css/main.css
+++ b/css/main.css
@@ -373,7 +373,7 @@ textarea {
     line-height: normal;
 }
 
-.button:hover, .menu-item:hover, .post-block:hover{
+.button:hover, .menu-item:hover, .post-block.ui-widget:hover{
 /*    background-color: #1d6fa5;*/
     background-color: #999;
     color: white;
@@ -500,6 +500,7 @@ textarea {
     padding: 0px;
     position: relative;
     background-color: #e31025;
+    color: white;
 }
 
 #post-block-mask {
