--- a/css/main.css
+++ b/css/main.css
@@ -485,7 +485,7 @@ textarea {
     display: inline-block;
 /*    background-color: #13486b;*/
 /*    background-color: #4395D1;*/
-    background-color: #eee;
+    background-color: #f6f6f6;
     height: 210px;
     width: 325px;
     overflow: hidden;
