--- a/css/main.css
+++ b/css/main.css
@@ -388,9 +388,15 @@ textarea {
 }
 
 .button.toolbar-button {
-    height: 40px;
+/*    height: 40px;
     line-height: 40px;
-    border: 1px solid transparent;
+    border: 1px solid transparent;*/
+    padding-left: 8px;
+    padding-right: 8px;
+    border-radius: 5px;
+    height: 30px;
+    line-height: 30px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.28);
 }
 
 .button.toolbar-button:hover, .button.nav-button:hover {
