--- a/css/main.css
+++ b/css/main.css
@@ -394,6 +394,10 @@ textarea {
     border-radius: 0px;
 }
 
+.button.menu-button {
+    border-radius: 0px;
+}
+
 .button.toolbar-button:hover, .button.nav-button:hover {
     border: 1px solid #ccc;
 }
@@ -462,7 +466,6 @@ textarea {
 #button-menu-main {
     min-width: 0 !important;
     width: 35px;
-    border-radius: 0px;
 }
 
 #button-groups {
