--- a/css/main.css
+++ b/css/main.css
@@ -472,12 +472,13 @@ textarea {
 /*    margin-left: 203px;*/
     background-color: #e31025;
     color: white;
-    padding-left: 8px;
-    padding-right: 8px;
-    border-radius: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-right: -10px;
+/*    border-radius: 5px;
     height: 30px;
     line-height: 30px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.28);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.28);*/
     font-weight: bold;
 }
 
