--- a/css/main.css
+++ b/css/main.css
@@ -474,6 +474,7 @@ textarea {
     color: white;
     padding-left: 20px;
     padding-right: 20px;
+    margin-right: -10px;
 /*    border-radius: 5px;
     height: 30px;
     line-height: 30px;
