--- a/css/main.css
+++ b/css/main.css
@@ -328,6 +328,8 @@ textarea {
 #ad-space {
     margin-top: 10px;
     border: red dashed;
+    width: 160px;
+    height: 600px;
 }
 
 .float-left {
@@ -803,14 +805,14 @@ div.right-toolbar-button {
 }
 
 #post-feed {
-    margin-left: 200px;
+    margin-left: 180px;
     margin-top: 52px;
     position: relative;
     min-height: 800px;
 }
 
 #left-rail {
-    width: 180px;
+    width: 170px;
     position: absolute;
     padding-top: 11px;
     top: 43px;
