--- a/css/main.css
+++ b/css/main.css
@@ -204,9 +204,9 @@ textarea {
     height: 20px;
     width: 20px;
     z-index: 1001;
-    float: right;
-    margin-top: 5px;
-    margin-right: 5px;
+    position: right;
+    top: 0;
+    right: 0;
     background-image: url('/img/panel-close.png');
     background-repeat: no-repeat;
 }
