--- a/css/main.css
+++ b/css/main.css
@@ -204,7 +204,7 @@ textarea {
     height: 20px;
     width: 20px;
     z-index: 1001;
-    position: right;
+    position: absolute;
     top: 0;
     right: 0;
     background-image: url('/img/panel-close.png');
