--- a/css/main.css
+++ b/css/main.css
@@ -205,10 +205,15 @@ textarea {
     width: 20px;
     z-index: 1001;
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 5px;
+    right: 5px;
     background-image: url('/img/panel-close.png');
     background-repeat: no-repeat;
+}
+
+.close-button:hover {
+    background-image: url('/img/panel-close-hover.png');
+    cursor: pointer;
 }
 
 /*.close-button {
