--- a/css/main.css
+++ b/css/main.css
@@ -216,6 +216,10 @@ textarea {
     cursor: pointer;
 }
 
+#select-group-list {
+    padding-top: 20px;
+}
+
 /*.close-button {
     background-image: url('/img/panel-close.png');
     background-repeat: no-repeat;
