--- a/css/main.css
+++ b/css/main.css
@@ -591,9 +591,14 @@ textarea {
     display: block;
 }
 
-.floating-panel-content .link-title {
+a.link-title {
     font-weight: bold;
+    color: #105cb6;
     display: block;
+}
+
+a.link-title:hover {
+    text-decoration: underline;
 }
 
 .post-block.post-block-image {
