--- a/css/main.css
+++ b/css/main.css
@@ -595,6 +595,7 @@ a.link-title {
     font-weight: bold;
     color: #105cb6;
     display: block;
+    text-decoration: none;
 }
 
 a.link-title:hover {
