--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,8 @@ html {
 body {
     overflow: hidden;
     /*    background: #f6f6f6;*/
-    background: #dddddd;
+    background-color: #eee;
+/*    background: #dddddd;*/
 }
 
 /*
