--- a/css/main.css
+++ b/css/main.css
@@ -469,7 +469,7 @@ a:visited {
     background-image: url('/icons/mail32w.png');
 }
 
-#post-button-comment:hover .button-icon.icon-comment {
+/*#post-button-comment:hover .button-icon.icon-comment {
     background-image: url('/icons/comment32.png');
 }
 
@@ -491,7 +491,7 @@ a:visited {
 
 #button-menu-main:hover .button-icon.icon-menu {
     background-image: url('/icons/gear32.png');
-}
+}*/
 
 #button-menu-main {
     min-width: 0 !important;
@@ -521,7 +521,7 @@ a:visited {
 .post-block.ui-widget {
     display: inline-block;
 /*    background-color: #13486b;*/
-    background-color: #4395D1;
+    background-color: #4D81BF;
 /*    background-color: #f6f6f6;*/
 /*    background-color: #105cb6;*/
     height: 210px;
@@ -555,7 +555,7 @@ a:visited {
     color: #f6f6f6;
 /*    background: #13486b;*/
 /*    background: #eee;*/
-    background-color: #105cb6;
+    background-color: #4d81bf;
 }
 
 /*.facebook-user-header a {
