--- a/css/main.css
+++ b/css/main.css
@@ -420,8 +420,8 @@ a:visited {
 }
 
 .button.toolbar-button {
-    height: 41px;
-    line-height: 41px;
+    height: 42px;
+    line-height: 42px;
     border-radius: 0px;
     color: #f6f6f6;
 }
@@ -503,7 +503,7 @@ a:visited {
 
 #button-groups {
 /*    margin-left: 203px;*/
-    background-color: #e31025;
+/*    background-color: #e31025;*/
     color: white;
     padding-left: 20px;
     padding-right: 20px;
