--- a/css/main.css
+++ b/css/main.css
@@ -430,6 +430,7 @@ a:visited {
 .button.menu-button {
     border-radius: 0px;
     color: #f6f6f6;
+    font-size: 1.1em;
 }
 
 .button.toolbar-button:hover, .button.nav-button:hover {
