--- a/css/main.css
+++ b/css/main.css
@@ -483,16 +483,9 @@ a:visited {
 }
 
 #button-groups {
-/*    margin-left: 203px;*/
-/*    background-color: #e31025;*/
-    color: white;
     padding-left: 20px;
     padding-right: 20px;
-    margin-right: -10px;
-/*    border-radius: 5px;
-    height: 30px;
-    line-height: 30px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.28);*/
+/*    margin-right: -10px;*/
     font-weight: bold;
 }
 
@@ -780,11 +773,11 @@ div.right-toolbar-button {
 }
 
 .toolbar-group.float-left {
-    margin-left: 10px;
+/*    margin-left: 10px;*/
 }
 
 .toolbar-group.float-right {
-    margin-right: 10px;
+/*    margin-right: 10px;*/
 }
 
 .menu {
