--- a/css/main.css
+++ b/css/main.css
@@ -213,7 +213,7 @@ a:visited {
 }
 
 #select-group-panel {
-    width: 994px;
+    width: 946px;
 }
 
 .close-button {
@@ -287,7 +287,7 @@ a:visited {
     display: inline-block;
     background-color: #eee;
     margin: 5px;
-    padding: 4px;
+    padding: 4px !important;
 }
 
 .selection-item-content {
