--- a/css/main.css
+++ b/css/main.css
@@ -514,6 +514,10 @@ a:visited {
     color: white;
 }
 
+#post-message-linkdata > div {
+    margin-bottom: 1em;
+}
+
 #post-block-mask {
     background-color: #f6f6f6;
     opacity: 0.3;
