--- a/css/main.css
+++ b/css/main.css
@@ -360,13 +360,17 @@ a:visited {
     margin-right: 5px;
 }
 
-.button, .menu-item, #post-count {
+.button, .menu-item {
     cursor: pointer;
     color: #444;
 /*    color: #f6f6f6;*/
     padding-left: 10px;
     padding-right: 10px;
     text-align: center;
+    display: inline-block;
+}
+
+#post-comment {
     display: inline-block;
 }
 
@@ -398,7 +402,7 @@ a:visited {
     font-size: 0.95em;
 }
 
-.button.toolbar-button, #post-count {
+.button.toolbar-button {
     height: 42px;
     line-height: 42px;
     border-radius: 0px;
