--- a/css/main.css
+++ b/css/main.css
@@ -119,11 +119,14 @@ a:visited {
     color: #105cb6;
 }
 
-#post-count {
+/*#post-count {
     line-height: 42px;
     height: 42px;
     font-weight: bold;
-}
+    color: #f6f6f6;
+    margin-right: 10px;
+    font-size: 1.1em;
+}*/
 
 .row,.col {
     overflow: hidden;
@@ -490,8 +493,7 @@ a:visited {
 
 #button-groups {
     padding-left: 20px;
-/*    padding-right: 20px;*/
-/*    margin-right: -10px;*/
+    padding-right: 20px;
     font-weight: bold;
 }
 
