--- a/css/main.css
+++ b/css/main.css
@@ -297,6 +297,7 @@ a:visited {
     background-color: #eee;
     margin: 5px;
     padding: 4px !important;
+    position: relative;
 }
 
 .selection-item-content {
