--- a/css/main.css
+++ b/css/main.css
@@ -290,6 +290,7 @@ a:visited {
     padding: 0;
     margin-top: 0;
     margin-bottom: 0;
+    margin-right: -5px;
 }
 
 .selection-item {
@@ -325,6 +326,7 @@ a:visited {
     color: #444;
     display: block;
     font-weight: bold;
+    font-size: 1.05em;
     margin-bottom: 4px;
 }
 
@@ -567,7 +569,7 @@ a:visited {
 .hint {
     color: #e35765;
     display: block;
-    font-weight: bold;
+    font-style: italic;
 }
 
 .post-block.post-block-text > div,
