--- a/css/main.css
+++ b/css/main.css
@@ -595,13 +595,12 @@ a:visited {
 }
 
 .post-block.post-block-text > div > p > span {
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    height: 100px;
+    height: 75px;
+    width: 75px;
     background-size: cover;
     margin-bottom: 10px;
+    margin-right: 10px;
+    float: left;
 }
 
 .post-block .link-title {
