--- a/css/main.css
+++ b/css/main.css
@@ -537,7 +537,7 @@ a:visited {
     display: block;
 }
 
-#post-block-mask {
+#post-block-mask, #selection-item-mask {
     background-color: #4d81bf;
     background-image: none;
     opacity: 0.4;
@@ -595,8 +595,8 @@ a:visited {
 }
 
 .post-block.post-block-text > div > p > span {
-    height: 75px;
-    width: 75px;
+    height: 60px;
+    width: 60px;
     background-size: cover;
     margin-bottom: 10px;
     margin-right: 10px;
