--- a/css/main.css
+++ b/css/main.css
@@ -598,7 +598,7 @@ a:visited {
     padding: 12px;
 }
 
-.post-block > div > p > span {
+.post-block .user-image {
     height: 60px;
     width: 60px;
     background-size: cover;
