--- a/css/main.css
+++ b/css/main.css
@@ -603,9 +603,9 @@ a:visited {
     padding: 12px;
 }
 
-.post-block .text {
+/*.post-block .text {
     margin-top: 5px;
-}
+}*/
 
 .post-block .user-image {
     height: 60px;
