--- a/css/main.css
+++ b/css/main.css
@@ -616,12 +616,7 @@ a:visited {
     float: left;
 }
 
-.post-block .user-name {
-    display: block;
-    font-weight: bold;
-}
-
-.post-block .link-title {
+.post-block .link-title, .post-block .user-name {
     font-weight: bold;
     display: block;
 }
