--- a/css/main.css
+++ b/css/main.css
@@ -517,7 +517,7 @@ a:visited {
 
 /*http://jsfiddle.net/E78q3/*/
 
-.post-block.ui-widget {
+.post-block.ui-widget, .post-block.hidden-content {
     display: inline-block;
     background-color: #eee;
     height: 205px;
@@ -602,6 +602,10 @@ a:visited {
     overflow: hidden;
     height: 170px;
     padding: 12px;
+}
+
+.post-block.hidden-content {
+    
 }
 
 /*.post-block .text {
