--- a/css/main.css
+++ b/css/main.css
@@ -532,6 +532,8 @@ a:visited {
 
 .post-block.ui-widget .post-image {
     background-size: cover;
+    height: 205px;
+    width: 325px;
 }
 
 .post-block.load-more {
