--- a/css/main.css
+++ b/css/main.css
@@ -610,6 +610,7 @@ a:visited {
 
 .post-block.hidden-content {
 /*    background: green;*/
+    margin-bottom: 0px !important;
 }
 
 /*.post-block .text {
