--- a/css/main.css
+++ b/css/main.css
@@ -406,7 +406,7 @@ a:visited {
 
 .button:hover, .menu-item:hover, .post-block.ui-widget:hover {
 /*    background-color: #1d6fa5;*/
-    background-color: #999;
+    background-color: #999 !important;
     color: #f6f6f6 !important;
 }
 
@@ -609,8 +609,7 @@ a:visited {
 }
 
 .post-block.hidden-content {
-/*    background: green;*/
-    margin-bottom: 0px !important;
+    margin: 0 !important;
 }
 
 /*.post-block .text {
