--- a/css/main.css
+++ b/css/main.css
@@ -533,7 +533,7 @@ a:visited {
 
 
 .post-block.ui-widget .post-image {
-    background-size: cover;
+    background-size: 100%;
     height: 205px;
     width: 325px;
 }
