--- a/css/main.css
+++ b/css/main.css
@@ -410,8 +410,8 @@ a:visited {
 .post-block.post-block-link:hover,
 .post-block.post-block-textlink:hover {
 /*    background-color: #1d6fa5;*/
-    background-color: #999;
-    color: #f6f6f6;
+    background-color: #ddd;
+/*    color: #f6f6f6;*/
 }
 
 .nav-button {
