--- a/css/main.css
+++ b/css/main.css
@@ -410,7 +410,7 @@ a:visited {
 .post-block.post-block-link:hover,
 .post-block.post-block-textlink:hover {
 /*    background-color: #1d6fa5;*/
-    background-color: #ddd;
+    background-color: #ccc;
 /*    color: #f6f6f6;*/
 }
 
@@ -437,6 +437,7 @@ a:visited {
 
 .button.toolbar-button:hover, .button.nav-button:hover {
 /*    border: 1px solid #ccc;*/
+    color: #444;
 }
 
 .button-icon {
@@ -448,36 +449,68 @@ a:visited {
     background-position: center center;
 }
 
-.button-icon.icon-new {
+.toolbar-button .button-icon.icon-new {
     background-image: url('/icons/paperplus32w.png');
 }
 
-.button-icon.icon-refresh {
+.toolbar-button .button-icon.icon-refresh {
     background-image: url('/icons/exchange32w.png');
 }
 
-.button-icon.icon-search {
+.toolbar-button .button-icon.icon-search {
     background-image: url('/icons/search32w.png');
 }
 
-.button-icon.icon-menu {
+.toolbar-button .button-icon.icon-menu {
     background-image: url('/icons/gear32w.png');
 }
 
-.button-icon.icon-comment {
+.toolbar-button .button-icon.icon-comment {
     background-image: url('/icons/comment32w.png');
 }
 
-.button-icon.icon-like {
+.toolbar-button .button-icon.icon-like {
     background-image: url('/icons/heart32w.png');
 }
 
-.button-icon.icon-pm {
+.toolbar-button .button-icon.icon-pm {
     background-image: url('/icons/mail32w.png');
 }
 
-.button-icon.icon-delete {
+.toolbar-button .button-icon.icon-delete {
     background-image: url('/icons/recycle32w.png');
+}
+
+.toolbar-button .button-icon.icon-new:hover {
+    background-image: url('/icons/paperplus32.png');
+}
+
+.toolbar-button .button-icon.icon-refresh:hover {
+    background-image: url('/icons/exchange32.png');
+}
+
+.toolbar-button .button-icon.icon-search:hover {
+    background-image: url('/icons/search32.png');
+}
+
+.toolbar-button .button-icon.icon-menu:hover {
+    background-image: url('/icons/gear32.png');
+}
+
+.toolbar-button .button-icon.icon-comment:hover {
+    background-image: url('/icons/comment32.png');
+}
+
+.toolbar-button .button-icon.icon-like:hover {
+    background-image: url('/icons/heart32.png');
+}
+
+.toolbar-button .button-icon.icon-pm:hover {
+    background-image: url('/icons/mail32.png');
+}
+
+.toolbar-button .button-icon.icon-delete:hover {
+    background-image: url('/icons/recycle32.png');
 }
 
 /*#post-button-comment:hover .button-icon.icon-comment {
