--- a/css/main.css
+++ b/css/main.css
@@ -206,8 +206,7 @@ a:visited {
 .selected-nav {
     color: #ffffff !important;
     text-decoration: none !important;
-/*    background: #13486b;*/
-    background: #aaa;
+    background-color: #e35765;
     font-weight: bold !important;
 }
 
@@ -419,6 +418,7 @@ a:visited {
     height: 40px;
     line-height: 40px;
     font-size: 0.95em;
+    background-color: #eee;
 }
 
 .button.toolbar-button {
@@ -550,6 +550,7 @@ a:visited {
     padding-left: 20px;
     padding-right: 20px;
     font-weight: bold;
+    color: #f6f6f6;
 }
 
 #button-groups:hover, .post-block.load-more:hover {
