--- a/css/main.css
+++ b/css/main.css
@@ -577,7 +577,7 @@ a:visited {
 
 
 
-.post-block.ui-widget .post-image {
+.post-block .visible-content {
     background-size: 100%;
     height: 205px;
     width: 325px;
