--- a/css/main.css
+++ b/css/main.css
@@ -661,7 +661,7 @@ a:visited {
     margin-top: 5px;
 }*/
 
-.post-block .user-image, .post-block .sub-image {
+.post-block .user-image, .post-block .link-image {
     height: 60px;
     width: 60px;
     background-size: cover;
