--- a/css/main.css
+++ b/css/main.css
@@ -571,6 +571,7 @@ a:visited {
     margin: 3px;
     margin-bottom: -1px;
     cursor: pointer;
+    border-radius: 5px;
 /*    color: #f6f6f6;*/
 /*    background-image: url('/img/tile-background.png');*/
 }
