--- a/css/main.css
+++ b/css/main.css
@@ -405,14 +405,17 @@ a:visited {
 }
 
 .button:hover, 
+.menu-item:hover {
+    background-color: #ccc;
+}
+
+/*.button:hover, 
 .menu-item:hover, 
 .post-block.post-block-text:hover,
 .post-block.post-block-link:hover,
 .post-block.post-block-textlink:hover {
-/*    background-color: #1d6fa5;*/
     background-color: #ccc;
-/*    color: #f6f6f6;*/
-}
+}*/
 
 .nav-button {
     display: block;
