--- a/css/main.css
+++ b/css/main.css
@@ -406,7 +406,8 @@ a:visited {
 
 .button:hover, 
 .menu-item:hover {
-    background-color: #ccc;
+    background-color: #aaa;
+    color: #f6f6f6;
 }
 
 /*.button:hover, 
@@ -441,7 +442,7 @@ a:visited {
 
 .button.toolbar-button:hover, .button.nav-button:hover {
 /*    border: 1px solid #ccc;*/
-    color: #444;
+    color: #f6f6f6;
 }
 
 .button-icon {
@@ -485,6 +486,7 @@ a:visited {
     background-image: url('/icons/recycle32w.png');
 }
 
+/*
 .toolbar-button .button-icon.icon-new:hover {
     background-image: url('/icons/paperplus32.png');
 }
@@ -493,7 +495,7 @@ a:visited {
     background-image: url('/icons/exchange32.png');
 }
 
-/*.toolbar-button .button-icon.icon-search:hover {
+.toolbar-button .button-icon.icon-search:hover {
     background-image: url('/icons/search32.png');
 }
 
@@ -517,7 +519,7 @@ a:visited {
     background-image: url('/icons/recycle32.png');
 }*/
 
-#post-button-comment:hover .button-icon.icon-comment {
+/*#post-button-comment:hover .button-icon.icon-comment {
     background-image: url('/icons/comment32.png');
 }
 
@@ -543,7 +545,7 @@ a:visited {
 
 #post-button-delete:hover .button-icon.icon-delete {
     background-image: url('/icons/recycle32.png');
-}
+}*/
 
 #button-menu-main {
     min-width: 0 !important;
