--- a/css/main.css
+++ b/css/main.css
@@ -668,7 +668,7 @@ a:visited {
     background-color: #f5f520;
 }
 
-.post-block.unique.post-block-text:hover {
+.hover-highlight {
     background-color: #f5f520;
 }
 
