--- a/css/main.css
+++ b/css/main.css
@@ -578,7 +578,7 @@ a:visited {
 .post-block.post-block-textlink {
     display: inline-block;
     background-color: #eee;
-    height: 205px;
+    height: 200px;
     width: 325px;
     overflow: hidden;
     margin: 3px;
@@ -593,7 +593,7 @@ a:visited {
 
 .post-block .visible-content {
     background-size: 100%;
-    height: 205px;
+    height: 200px;
     width: 325px;
 }
 
@@ -636,7 +636,7 @@ a:visited {
 }*/
 
 .load-more > .load-more-text {
-    line-height: 205px;
+    line-height: 200px;
     vertical-align: middle;
     font-size: 1.15em;
 }
@@ -656,14 +656,14 @@ a:visited {
 .post-block.post-block-link .wrapper,
 .post-block.post-block-textlink .wrapper {
     overflow: hidden;
-    height: 205px;
+    height: 200px;
 }
 
 .post-block.post-block-text .content,
 .post-block.post-block-link .content,
 .post-block.post-block-textlink .content {
     overflow: hidden;
-    height: 168px;
+    height: 12em;
     padding: 12px;
 }
 
