--- a/css/main.css
+++ b/css/main.css
@@ -816,7 +816,7 @@ a.link-title {
     display: inline-block;
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     float: left;
 }
 
