--- a/css/main.css
+++ b/css/main.css
@@ -362,7 +362,8 @@ a:visited {
 #ad-space {
     margin-top: 10px;
     width: 160px;
-    height: 605px;
+    height: 600px;
+    overflow: hidden;
 }
 
 .float-left {
@@ -915,18 +916,19 @@ div.right-toolbar-button {
 }
 
 #post-feed {
-    margin-left: 175px;
+    margin-left: 170px;
     margin-top: 52px;
     position: relative;
     min-height: 800px;
 }
 
 #left-rail {
-    width: 165px;
+    width: 160px;
     position: absolute;
     padding-top: 11px;
     top: 43px;
     border-radius: 0;
+    overflow: hidden;
 }
 
 .toolbar {
