--- a/css/main.css
+++ b/css/main.css
@@ -565,7 +565,7 @@ a:visited {
     color: #f6f6f6;
 }
 
-#button-groups:hover, .post-block.load-more:hover {
+#button-groups:hover {
     background-color: #e35765;
 }
 
@@ -671,9 +671,14 @@ a:visited {
     color: #f6f6f6;
 }
 
-.hover-highlight {
+.post-block.unique.post-block-text.hover {
     background-color: #4d81bf !important;
     color: #f6f6f6;
+}
+
+.post-block.load-more.hover {
+    background-color: #f5f520;
+    color: #444;
 }
 
 /*.post-block .text {
