--- a/css/main.css
+++ b/css/main.css
@@ -677,8 +677,7 @@ a:visited {
 }
 
 .post-block.load-more.hover {
-    background-color: #f5f520;
-    color: #444;
+    background-color: #e35765;
 }
 
 /*.post-block .text {
