--- a/css/main.css
+++ b/css/main.css
@@ -407,8 +407,13 @@ a:visited {
     line-height: normal;
 }
 
-.button:hover, 
+/*.button:hover, 
 .menu-item:hover {
+    background-color: #aaa;
+    color: #f6f6f6;
+}*/
+
+.button.hover, .menu-item.hover {
     background-color: #aaa;
     color: #f6f6f6;
 }
@@ -443,8 +448,7 @@ a:visited {
     font-size: 1.1em;
 }
 
-.button.toolbar-button:hover, .button.nav-button:hover {
-/*    border: 1px solid #ccc;*/
+.button.toolbar-button.hover, .button.nav-button.hover {
     color: #f6f6f6;
 }
 
