--- a/css/main.css
+++ b/css/main.css
@@ -369,6 +369,10 @@ a:visited {
     overflow: hidden;
 }
 
+.post-block.ad-div {
+    background-color: #c0c0c0;
+}
+
 #bottom-ad-banner {
     width: 728px;
     height: 90px;
@@ -596,8 +600,8 @@ a:visited {
 .post-block.post-block-textlink {
     display: inline-block;
     background-color: #eee;
-    height: 200px;
-    width: 325px;
+    height: 250px;
+    width: 300px;
     overflow: hidden;
     margin: 3px;
     margin-bottom: -1px;
@@ -610,8 +614,8 @@ a:visited {
 
 .post-block .visible-content {
     background-size: 100%;
-    height: 200px;
-    width: 325px;
+    height: 250px;
+    width: 300px;
 }
 
 .post-block.load-more {
@@ -654,7 +658,7 @@ a:visited {
 }*/
 
 .load-more > .load-more-text {
-    line-height: 200px;
+    line-height: 250px;
     vertical-align: middle;
     font-size: 1.15em;
 }
@@ -674,7 +678,7 @@ a:visited {
 .post-block.post-block-link .wrapper,
 .post-block.post-block-textlink .wrapper {
     overflow: hidden;
-    height: 200px;
+    height: 250px;
 }
 
 .post-block.post-block-text .content,
