--- a/css/main.css
+++ b/css/main.css
@@ -371,6 +371,8 @@ a:visited {
 
 .post-block.ad-div {
     background-color: #c0c0c0;
+    color: #e35765;
+    font-weight: bold;
 }
 
 #bottom-ad-banner {
