--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ html {
 
 body {
     overflow: hidden;
-/*    background-color: #f1f1f1;*/
+    background-color: #f1f1f1;
 /*    font-size: 0.98em;*/
 }
 
@@ -304,7 +304,7 @@ a:visited {
 
 .selection-item {
     display: inline-block;
-    background-color: #eee;
+    background-color: #ddd;
     margin: 5px;
     padding: 4px !important;
     position: relative;
@@ -452,7 +452,7 @@ a:visited {
     height: 40px;
     line-height: 40px;
     font-size: 0.95em;
-    background-color: #eee;
+    background-color: #ddd;
 }
 
 .button.toolbar-button {
@@ -601,7 +601,7 @@ a:visited {
 .post-block.post-block-link,
 .post-block.post-block-textlink {
     display: inline-block;
-    background-color: #eee;
+    background-color: #ddd;
     height: 250px;
     width: 300px;
     overflow: hidden;
