--- a/css/main.css
+++ b/css/main.css
@@ -826,8 +826,8 @@ a.link-title {
     cursor: pointer;
     display: inline-block;
     margin: 3px;
-    max-width: 200px;
-    max-height: 200px;
+    min-width: 200px;
+    min-height: 200px;
 }
 
 #overlay-app-loading {
